# invAIriant

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  action.yml  invairiant.config.yml  pyproject.toml
.cursor/rules/: invairiant.mdc
.github/: pull_request_template.md
.github/workflows/: validate.yml
.invairiant/history/: finding-registry.jsonl  lens-score-history.csv  rejected-hypotheses.jsonl
case-studies/: README.md
case-studies/ai-agent-refund-bot/: README.md  ai-reviewer-miss.md  diff.md  invairiant.config.yml  rejected-hypotheses.md  report.json  report.md
case-studies/generated-typescript-api/: README.md  ai-reviewer-miss.md  diff.md  invairiant.config.yml  rejected-hypotheses.md  report.json  report.md
case-studies/p2p-network-transport-change/: README.md  ai-reviewer-miss.md  diff.md  invairiant.config.yml  rejected-hypotheses.md  report.json  report.md
case-studies/persistent-mesh-transport/: README.md  ai-reviewer-miss.md  diff.patch  invairiant.config.yml  rejected-hypotheses.md  report.json  report.md
cli/: README.md  invairiant.py
docs/: audit-workflow.md  cli.md  demo.md  github-action.md  methodology.md  publishing.md
docs/audits/: 2026-07-03-closure-6-phase.json  2026-07-03-closure-6-phase.md  2026-07-03-self-audit.json  2026-07-03-self-audit.md
examples/: README.md
examples/infra-service/: example-report.json
examples/refundpilot-demo/: .gitignore  README.md  demo.tape  invairiant.config.yml  llm.py  obs.py  payments.py  pr-comment.md  refund_agent.py  report.json  run-demo.sh
examples/refundpilot-demo/docs/adr/: 0007-refund-caps.md
invairiant/: __init__.py  __main__.py  cli.py  evidence.py  history.py  render.py  schemas.py  scopes.py  subprocesses.py  term.py
lenses/domain/: network-persistence.md
schemas/: evidence-bundle.schema.json  finding.schema.json
scripts/: content-gate.sh  install-hooks.sh  release-gate.sh  validate_framework.py
skill/: README.md  SKILL.md
tests/: conftest.py  test_cli_e2e.py  test_content_gate.py  test_hardening.py  test_helpers.py  test_record_history.py  test_scope.py
