# Packaging for the invAIriant helper CLI.
#
# invAIriant's product is the /invairiant agent skill; this package installs the
# narrow `invairiant` command (init / validate-config / validate-report /
# collect / render-report / render-comment / ci-gate / record / history). It
# serves the audit; it does not audit. See docs/cli.md.
#
# The wheel bundles the framework data the CLI reads at runtime (schemas,
# examples, lens ids) under `invairiant_framework/`, so a plain
# `pip install invairiant` works OUTSIDE a checkout — no INVAIRIANT_HOME needed.
# From a checkout the CLI still finds the repo tree first; INVAIRIANT_HOME still
# overrides both. Editable dev install: `pip install -e .`.

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "invairiant"
version = "0.2.5"
description = "Helper CLI for the invAIriant agentic audit protocol — it serves the audit, it does not audit."
readme = "cli/README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "mindicator & silicon bags quartet" }]
keywords = ["audit", "architecture", "evidence", "llm", "code-review"]
dependencies = ["jsonschema>=4.18", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/mindicator/invairiant"
Documentation = "https://github.com/mindicator/invairiant/blob/main/docs/cli.md"

[project.scripts]
invairiant = "invairiant.cli:main"

# The CLI is the `invairiant/` package (split into cli/scopes/schemas/evidence/
# render/history/subprocesses/term for readability). The framework data it reads
# at runtime rides along bundled INSIDE the package, at
# `invairiant/invairiant_framework/`, which is exactly where `framework_root()`
# looks (`here.parent / "invairiant_framework"`) when installed outside a
# checkout. force-include maps the source trees into the wheel without moving
# anything in the repo (the repo layout stays the source of truth; checkout runs
# read it directly). `cli/invairiant.py` is a shim for the install-free path and
# is intentionally NOT shipped in the wheel.
[tool.hatch.build.targets.wheel]
packages = ["invairiant"]
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "invairiant/invairiant_framework/schemas"
"examples" = "invairiant/invairiant_framework/examples"
"lenses" = "invairiant/invairiant_framework/lenses"

# Source distribution keeps the full tree so it builds identically to a checkout.
[tool.hatch.build.targets.sdist]
include = [
  "/invairiant",
  "/cli",
  "/schemas",
  "/examples",
  "/lenses",
  "/templates",
  "/prompts",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
]

# Unit tests for the CLI live in tests/ and import the `invairiant` package from
# the repo root (see tests/conftest.py). Run: python -m pytest -q
[tool.pytest.ini_options]
testpaths = ["tests"]
